--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description         : >-
                       I am an expected bachelor in Biomechatronics Engineering at National Taiwan University.
                       I am interested in robotics, mostly surgical robots.
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-# repository          : YoussefRaafatNasry/portfolYOU     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+repository          : liver121888/liver121888.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
 open_new_tab        : false                             # Opens external URLs in new tab (works for posts, projects and navbar only)
 
@@ -43,7 +43,7 @@ author:
 # twitch            : your_username
 # twitter           : your_username
 # vimeo             : your_username
-# youtube           : your_channel_name
+  youtube           : david121888
 # keybase           : your_username
 
 
@@ -71,16 +71,6 @@ analytics:
     tracking_id: G-KF4ZYPGYNN
 
 
-### Buy me a coffee ###
-# See https://www.buymeacoffee.com/
-buymeacoffee:
-  enabled: false
-  username: your_username
-  color: "#007bff"
-  message: "Thank you for visiting."                    # Message to be displayed aside from the button for a few seconds.
-  description: "Support me on Buy me a coffee!"
-
-
 ### Defaults for collections ###
 defaults:
   - scope:
@@ -98,8 +88,6 @@ defaults:
 ### Exclude from processing ###
 exclude:
   - README.md
-  - CONTRIBUTING.md
   - LICENSE
   - "*.log"
-
 github: [metadata]
