--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ nav_exclude:                                            # The following paths ar
 author:
   name              : Li-Wei Yang
   image             : img/profile.jpg
-# behance           : Li-Wei Yang
+# behance           : your_username
 # dribbble          : your_username
   email             : liver121888@gmail.com
   facebook          : david121888
