--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ disqus:
 
 ### Analytics ###
 analytics:
-  enabled: false                                        # Set true to enable analytics
+  enabled: true # Set true to enable analytics
   google:
     tracking_id: G-KF4ZYPGYNN
 
