Update Resume, About.

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,6 +1,6 @@
 - title: Center for Artificial Intelligence and Advanced Robotics
-  from: Feb 2022
-  to: present
+  from: Feb. 2022
+  to: Sept. 2022
   description: Research Assistant <br>
                § Topic CHARM-Companion Healthcare Aid Robot Manager <br>
                § Skills Android, Java, Kotlin, SQLite <br>
@@ -9,8 +9,8 @@
                • Utilized SQLite to synchronize multiple users' physiological data to a remote server, and developed a multi-user switching feature on local robots. <br>
 
 - title: Robots and Medical Mechatronics Lab
-  from: Jul 2020
-  to: Mar 2022
+  from: Jul. 2020
+  to: Mar. 2022
   description: Undergraduate Researcher <br>
                § Topic Swab Robot, Field Robot. <br>
                § Skills ROS, Python, SolidWorks, MATLAB. <br>
