Add disqus, modify stego project, modify cv, modify search, remove jekyll plugin pdf-embed.

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,6 @@ open_new_tab        : false # Opens external URLs in new tab (works for posts, p
 ### Plugins ###
 plugins:
   - jemoji
-  - jekyll-pdf-embed
 
 
 ### Navbar Settings ###
@@ -61,7 +60,7 @@ collections:
 
 ### Disqus ###
 disqus:
-  shortname: your-short-name-disqus # Your website Shortname on disqus
+  shortname: li_wei_yang # Your website Shortname on disqus
 
 
 ### Analytics ###
