--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ collections:
 
 ### Disqus ###
 disqus:
-  shortname: li_wei_yang # Your website Shortname on disqus
+  shortname: liver121888 # Your website Shortname on disqus
 
 
 ### Analytics ###
