--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ open_new_tab        : false # Opens external URLs in new tab (works for posts, p
 ### Plugins ###
 plugins:
   - jemoji
+  - jekyll-pdf-embed
 
 
 ### Navbar Settings ###
