--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 ### Site Settings ###
 title               : Li-Wei Yang
-description         : [IMPORTANT] This site is deprecated! My personal website is migrated to gitlab.io for better jekyll support. <br>
-                      Please move to the <a href="https://liver121888.gitlab.io/">new website</a> for better experience. <br>
+description         : <a href="https://liver121888.gitlab.io/">new website</a>
 baseurl             : "" # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : liver121888/liver121888.github.io # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
